<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:stretchColumns="2">


    <TableRow>

        <TextView
            android:layout_width="169dp"
            android:layout_column="1"
            android:padding="3dip"
            android:text="@string/isotope" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:entries="@array/isotope_arrays"
            android:textColor="@color/easyfei_green" />
    </TableRow>

    <View android:layout_height="2dip" />

    <TableRow>

        <TextView
            android:layout_column="1"
            android:padding="3dip"
            android:text="@string/material" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:entries="@array/material_arrays"
            android:prompt="@string/material_prompt" />
    </TableRow>


    <View android:layout_height="2dip" />

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="Thickness" />

        <EditText
            android:id="@+id/edit_text1"
            android:layout_column="1"
            android:hint="@string/example1"
            android:inputType="numberDecimal"
            android:padding="3dip" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/thickness_arrays"
            android:prompt="@string/thickness_prompt"
            android:textColor="@color/easyfei_green" />
    </TableRow>


    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="Distance" />

        <EditText
            android:id="@+id/edit_text2"
            android:hint="@string/example2"
            android:inputType="numberDecimal"
            android:padding="3dip" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/distance_arrays"
            android:prompt="@string/distance_prompt"
            android:textColor="@color/easyfei_green" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/activity" />

        <EditText
            android:id="@+id/edit_text3"
            android:hint="@string/example25"
            android:inputType="numberDecimal"
            android:padding="3dip" />

        <TextView
            android:id="@+id/curie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curie"
            android:textColor="@color/colorBlack" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/film_factor" />

        <EditText
            android:id="@+id/edit_text4"
            android:hint="@string/example4"
            android:inputType="numberDecimal"
            android:padding="3dip" />

        <TextView
            android:padding="3dip"
            android:text="@string/speed_factor"
            android:textColor="@color/colorBlack" />
    </TableRow>

    <TableRow>

        <Button
            android:layout_column="1"
            android:id="@+id/calculate_btn"
            android:background="@color/colorPrimary"
            android:padding="3dip"
            android:text="@string/calculate" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:id="@+id/text_View_result"
            android:text="@string/result"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_view_calculate_result"
            android:layout_height="70dp"
            android:layout_column="1"
            android:textSize="@dimen/activity_vertical_margin"
            android:visibility="gone"
            android:padding="3dip"
            android:textColor="@color/easyfei_green"
            />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/start"
            android:visibility="gone"
             />

        <Button
            android:id="@+id/stop_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="2"
            android:background="@color/colorPrimary"
            android:text="@string/stop"
            android:visibility="gone"
           />
    </TableRow>

    <TextView
        android:id="@+id/text_View_result_time"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:textSize="@dimen/activity_vertical_margin"
        android:textColor="@color/colorRed"
        android:visibility="gone"
        />
    <Chronometer
        android:id="@+id/simpleChronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/easyfei_black"
        android:textSize="@dimen/activity_vertical_margin"
        android:textColor="@color/easyfei_green"
       />

</TableLayout>