<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@color/easyfei_black"
    android:padding="20dp"
    >
    <EditText
        android:id="@+id/edit_text_info"
        android:layout_width="match_parent"
        android:text="@string/dose_rat"
        android:layout_height="wrap_content"
        android:textColor="@color/easyfei_green"
        />
    <EditText
        android:id="@+id/edit_text_value"
        android:textColor="@color/easyfei_green"
        android:text="@string/dose_rat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@color/easyfei_green"
        android:text="@string/edit_text"/>
    <TextView
        android:id="@+id/view_text_1"
        android:layout_width="match_parent"
        android:text=""
        android:layout_height="50dp"
        android:textColor="@color/easyfei_green"
        />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@color/easyfei_green"
        android:text="@string/delete_item"/>

</LinearLayout>