<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="20dp"
    android:scrollbars="vertical"
    tools:context="com.androidjson.firebasegooglelogin_androidjsoncom.MainActivity">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:textColor="#000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <ImageView
        android:id="@+id/user_pic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/person" />

    <Button
        android:id="@+id/sign_out"
        android:textColor="#000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/abmelden"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#000" />

    <TextView
        android:id="@+id/birthday_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewName"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#000" />


    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthday_txt"
        android:layout_centerHorizontal="true"
        android:gravity="right"
        android:textColor="#000"/>

    <Button
        android:id="@+id/radiographer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewEmail"
        android:layout_marginTop="39dp"
        android:textColor="#000"
        android:text="@string/radiographer"
        android:visibility="gone" />

    <Button
        android:id="@+id/health_physic_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radiographer_btn"
        android:layout_marginTop="39dp"
        android:textColor="#000"
        android:text="@string/health_physic"
        android:visibility="gone" />

    <Button
        android:id="@+id/birthday_btn"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/health_physic_btn"
        android:layout_marginTop="39dp"
        android:text="@string/birthday"
        android:visibility="gone"/>


</RelativeLayout>
